--- a/styles.html
+++ b/styles.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Hello World!</h1>
 <p>HTML:n uudelleenopettelu on aina niin kivaa. Jee.</p>
-<div>
+<div class="div">
     <p>THIS IS SOME TEXT INSIDE A DIV ELEMENT</p>
 </div>
 <ol>
